<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ExpertCategories" >

    <Button
        android:id="@+id/ShortSleevesButton"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="19dp"
        android:onClick="ShortSleeveShirts"
        android:text="@string/ShortSleeveShirtsCategory" />

    <Button
        android:id="@+id/LongSleevesButton"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_alignBaseline="@+id/ShortSleevesButton"
        android:layout_alignBottom="@+id/ShortSleevesButton"
        android:layout_toRightOf="@+id/ShortSleevesButton"
        android:onClick="LongSleeveShirts"
        android:text="@string/LongSleeveShirtsCategory" />

    <Button
        android:id="@+id/Skirtsbutton"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_below="@+id/ShortSleevesButton"
        android:onClick="Skirts"
        android:text="@string/SkirtsCategory" />

    <Button
        android:id="@+id/ShoesButton"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="Shoes"
        android:text="@string/ShoesCategory" />

    <Button
        android:id="@+id/PantsButton"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_below="@+id/ShortSleevesButton"
        android:layout_toRightOf="@+id/ShortSleevesButton"
        android:onClick="Pants"
        android:text="@string/PantsCategory" />

</RelativeLayout>
