<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UserHome1" >

    <Button
        android:id="@+id/buttonDoneMatchEditing"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="moveToSSShirtsHome"
        android:text="@string/ShortSleeveShirtsCategory" />

    <Button
        android:id="@+id/buttonDone"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_alignRight="@+id/buttonDoneMatchEditing"
        android:layout_below="@+id/buttonDoneMatchEditing"
        android:onClick="moveToSkirtsHome"
        android:text="@string/SkirtsCategory" />

    <Button
        android:id="@+id/button4"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_alignBaseline="@+id/buttonDone"
        android:layout_alignBottom="@+id/buttonDone"
        android:layout_alignLeft="@+id/button2"
        android:onClick="moveToPantsHome"
        android:text="@string/PantsCategory" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_alignTop="@+id/buttonDoneMatchEditing"
        android:layout_toRightOf="@+id/buttonDoneMatchEditing"
        android:onClick="moveToLSShirtsHome"
        android:text="@string/LongSleeveShirtsCategory" />

    <Button
        android:id="@+id/button5"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_below="@+id/buttonDone"
        android:layout_toLeftOf="@+id/button4"
        android:onClick="moveToShoesHome"
        android:text="@string/ShoesCategory" />

</RelativeLayout>
